trying out media queries and adjusted footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
 </body>
 <footer>
-    <a href="https://github.com/R3VZz">My GitHub</a>
+    <p>My links: </p>
+    <a href="https://github.com/R3VZz" target="_blank"><img src="./images/github.png" alt="Github Logo"></a>
 </footer>
 <script src="script.js"></script>
 
