added media queries for responsivity

--- a/index.html
+++ b/index.html
@@ -12,53 +12,53 @@
     <h1>Drumkit</h1>
     <div class="app">
         <div class="playSoundCol">
-            <div>
-                <p>Press 1 key</p>
-                <button id="boomButton">Boom</button>
+            <div id="boomButton">
+                <p class="key">Press 1 key</p>
+                <p>Boom</p>
                 <audio id="boomSound" src="./drumSounds/boom.wav"></audio>
             </div>
-            <div>
-                <p>Press 2 key</p>
-                <button id="clapButton">Clap</button>
+            <div id="clapButton">
+                <p class="key">Press 2 key</p>
+                <p>Clap</p>
                 <audio id="clapSound" src="./drumSounds/clap.wav"></audio>
             </div>
-            <div>
-                <p>Press 3 key</p>
-                <button id="hihatButton">Hihat</button>
+            <div id="hihatButton">
+                <p class="key">Press 3 key</p>
+                <p>Hihat</p>
                 <audio id="hihatSound" src="./drumSounds/hihat.wav"></audio>
             </div>
         </div>
         <div class="playSoundCol">
-            <div>
-                <p>Press 4 key</p>
-                <button id="kickButton">Kick</button>
+            <div id="kickButton">
+                <p class="key">Press 4 key</p>
+                <p>Kick</p>
                 <audio id="kickSound" src="./drumSounds/kick.wav"></audio>
             </div>
-            <div>
-                <p>Press 5 key</p>
-                <button id="openhatButton">Openhat</button>
+            <div id="openhatButton">
+                <p class="key">Press 5 key</p>
+                <p>Openhat</p>
                 <audio id="openhatSound" src="./drumSounds/openhat.wav"></audio>
             </div>
-            <div>
-                <p>Press 6 key</p>
-                <button id="rideButton">Ride</button>
+            <div id="rideButton">
+                <p class="key">Press 6 key</p>
+                <p>Ride</p>
                 <audio id="rideSound" src="./drumSounds/ride.wav"></audio>
             </div>
         </div>
         <div class="playSoundCol">
-            <div>
-                <p>Press 7 key</p>
-                <button id="snareButton">Snare</button>
+            <div id="snareButton">
+                <p class="key">Press 7 key</p>
+                <p>Snare</p>
                 <audio id="snareSound" src="./drumSounds/snare.wav"></audio>
             </div>
-            <div>
-                <p>Press 8 key</p>
-                <button id="tinkButton">Tink</button>
+            <div id="tinkButton">
+                <p class="key">Press 8 key</p>
+                <p>Tink</p>
                 <audio id="tinkSound" src="./drumSounds/tink.wav"></audio>
             </div>
-            <div>
-                <p>Press 9 key</p>
-                <button id="tomButton">Tom</button>
+            <div id="tomButton">
+                <p class="key">Press 9 key</p>
+                <p>Tom</p>
                 <audio id="tomSound" src="./drumSounds/tom.wav"></audio>
             </div>
         </div>
